--- a/examples/hello32x7/Makefile
+++ b/examples/hello32x7/Makefile
@@ -7,7 +7,7 @@ DRIVER = r393c164
 OBJECTS = $(DRIVER:%=libledmtx_%.o) $(SRCDIR)/font/libledmtx_font5x7.o \
   $(SRCDIR)/libledmtx_stdio.o
 LFLAGS = -mpic16 -p$(P18FXXX) -Wl-m -L$(SRCDIR)/core -l libc18f.lib -l libledmtx_core.lib
-CFLAGS = -mpic16 -p$(P18FXXX) --fomit-frame-pointer --pstack-model=small -I$(SRCDIR)/../include
+CFLAGS = -mpic16 -p$(P18FXXX) --fomit-frame-pointer --pstack-model=small --use-non-free -I$(SRCDIR)/../include
 
 OBJECTS += hello32x7.o
 
