Transition from `p18fxxx.inc` to `ledmtx_config.h`
Deprecate `src/p18fxxx.inc` generated by make during build
in favor of `include/ledmtx_config.h`, which contains additional
information regarding the build.

It is foreseen to include information regarding upcoming optional
features, e.g. `LEDMTX_HAVE_DOUBLE_BUFFER`.

--- a/include/Makefile
+++ b/include/Makefile
@@ -1,10 +1,20 @@
-all: ;
+include ../src/make.mk
+
+AUTOGEN = ledmtx_config.h
+
+.ONESHELL:
+all: $(AUTOGEN)
 
 clean:
-	rm -f *~
+	rm -f *~ $(AUTOGEN)
 
 install: all mkdir-install
 	cp *.h $(INCLUDEDIR)
 
 mkdir-install:
 	[ -d $(INCLUDEDIR) ] || mkdir -p $(INCLUDEDIR)
+
+ledmtx_config.h: ledmtx_config.h.in ../src/make.mk
+	_P18FXXX="$(P18FXXX)" \
+		_P18FXXX_INC="p$(P18FXXX).inc" \
+		LEDMTX_GITREVISION="$(shell git rev-parse HEAD)" envsubst < ledmtx_config.h.in > ledmtx_config.h
