--- a/examples/hello32x7/Makefile
+++ b/examples/hello32x7/Makefile
@@ -6,7 +6,7 @@ DRIVER = r393c164
 
 OBJECTS = $(DRIVER:%=libledmtx_%.o) $(SRCDIR)/font/libledmtx_font5x7.o \
   $(SRCDIR)/libledmtx_stdio.o
-LFLAGS = -mpic16 -p$(P18FXXX) -Wl-m -L$(SRCDIR)/core -l libc18f.lib -l libledmtx_core.lib
+LDFLAGS = -mpic16 -p$(P18FXXX) --use-non-free -Wl-m -L$(SRCDIR)/core -l libc18f.lib -l libledmtx_core.lib
 CFLAGS = -mpic16 -p$(P18FXXX) --fomit-frame-pointer --pstack-model=small --use-non-free -I$(SRCDIR)/../include
 
 OBJECTS += hello32x7.o
@@ -17,7 +17,7 @@ clean:
 	rm -f *~ *.asm *.cod *.hex *.lst *.map *.o
 
 hello32x7.hex: $(OBJECTS)
-	$(CC) $(LFLAGS) -o $@ $^
+	$(CC) $(LDFLAGS) -o $@ $^
 
 $(DRIVER:%=libledmtx_%.o): $(DRIVER:%=ledmtx_%.inc)
 	(cd $(SRCDIR)/driver && $(MAKE) D=$(DRIVER) O=$(CURDIR) driver)
