--- a/examples/scrollstr32x7/Makefile
+++ b/examples/scrollstr32x7/Makefile
@@ -5,7 +5,7 @@ SRCDIR = ../../src
 DRIVER = r393c164
 
 OBJECTS = $(DRIVER:%=libledmtx_%.o) $(SRCDIR)/font/libledmtx_font5x7.o
-LFLAGS = -mpic16 -p$(P18FXXX) -Wl-m -L$(SRCDIR)/core -L$(SRCDIR)/modules/scrollstr \
+LDFLAGS = -mpic16 -p$(P18FXXX) --use-non-free -Wl-m -L$(SRCDIR)/core -L$(SRCDIR)/modules/scrollstr \
   -l libledmtx_core.lib -l libledmtx_scrollstr.lib
 CFLAGS = -mpic16 -p$(P18FXXX) --fomit-frame-pointer --pstack-model=small --use-non-free -I$(SRCDIR)/../include
 
@@ -17,7 +17,7 @@ clean:
 	rm -f *~ *.asm *.cod *.hex *.lst *.map *.o
 
 scrollstr32x7.hex: $(OBJECTS)
-	$(CC) $(LFLAGS) -o $@ $^
+	$(CC) $(LDFLAGS) -o $@ $^
 
 $(DRIVER:%=libledmtx_%.o): $(DRIVER:%=ledmtx_%.inc)
 	(cd $(SRCDIR)/driver && $(MAKE) D=$(DRIVER) O=$(CURDIR) driver)
