--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -15,10 +15,11 @@ config.substitutions += [
     ('%gpasm', 'gpasm'),
     ('%gplink', 'gplink'),
     ('%gpsim', 'gpsim'),
+    ('%sdcc', 'sdcc'),
     ('%ledmtx_test_dir', config.ledmtx_test_dir),
     ('%ledmtx_src_dir', config.ledmtx_src_dir),
     ('%ASFLAGS', '-p 18f452 -I' + config.ledmtx_src_dir + '/../include -I' + config.ledmtx_src_dir),
     ('%GPLINKFLAGS', '-O2 ' + ' '.join(['-I%s' % I for I in config.sdcc_dirs['libdir']])),
-    ('%LDFLAGS', '-mpic16 -p18f452 --use-non-free -Wl-m -L' + config.ledmtx_src_dir + '/core -l libc18f.lib -l libledmtx_core.lib'),
+    ('%LDFLAGS', '-mpic16 -p18f452 --use-non-free --use-crt=crt0i.o -Wl-m -L' + config.ledmtx_src_dir + '/core -l libc18f.lib -l libledmtx_core.lib'),
     ('%CFLAGS', '-mpic16 -p18f452 --fomit-frame-pointer --pstack-model=small --use-non-free -I' + config.ledmtx_src_dir + '/../include'),
 ]
