Expose `ENABLE_DOUBLE_BUFFER` build option

--- a/include/ledmtx_config.h.in
+++ b/include/ledmtx_config.h.in
@@ -12,6 +12,8 @@
 #define _P18FXXX "${_P18FXXX}"
 #define _P18FXXX_INC "${_P18FXXX_INC}"
 
+#define LEDMTX_HAVE_DOUBLE_BUFFER ${LEDMTX_HAVE_DOUBLE_BUFFER}
+
 #define LEDMTX_GITREVISION "${LEDMTX_GITREVISION}"
 
 #endif
