[tests] Add double-buffer-specific tests

--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -11,6 +11,11 @@ config.excludes = []
 config.test_source_root = config.ledmtx_test_dir
 config.test_exec_root = config.ledmtx_test_dir
 
+# Publish all `LEDMTX_HAVE_xxx` macros in `ledmtx_config.h` that equal 1 as available features
+# such that those can be used in a `REQUIRES` directive.
+config.available_features = [K for K, V in config.ledmtx_config_h.items()
+                             if K.startswith('LEDMTX_HAVE_') and V == '1']
+
 config.substitutions += [
     ('%gpasm', 'gpasm'),
     ('%gplink', 'gplink'),
