--- a/tests/lit.site.cfg
+++ b/tests/lit.site.cfg
@@ -26,9 +26,24 @@ def get_sdcc_search_dirs():
             search_dirs[section_name] += [line]
     return search_dirs
 
+# Use `cpp` to collect the values for the PP macros in `keys` from `ledmtx_config.h`.
+# Return a dictionary of the form `{ 'KEY_1': 'value1', ... }`
+def get_config_h_values(path_to_config_h, keys):
+    cpp = subprocess.Popen(["cpp", "-P", "-include", path_to_config_h],
+                            stdin=subprocess.PIPE, stdout=subprocess.PIPE)
+    cpp_stdout = cpp.communicate(input='\n'.join(keys).encode())[0].decode()
+    cpp.wait()
+    values = cpp_stdout.splitlines()
+    return dict(zip(keys, values))
+
 config.sdcc_dirs = get_sdcc_search_dirs()
 config.ledmtx_test_dir = os.path.dirname(os.path.realpath(__file__))
 config.ledmtx_src_dir = os.path.join(config.ledmtx_test_dir, "..", "src")
+config.ledmtx_config_h = get_config_h_values(os.path.join(config.ledmtx_src_dir,
+                                                          "..", "include", "ledmtx_config.h"),
+                                             [
+                                                 'LEDMTX_HAVE_DOUBLE_BUFFER'
+                                             ])
 
 lit.llvm.initialize(lit_config, config)
 lit_config.load_config(config, os.path.join(config.ledmtx_test_dir, "lit.cfg"))
