Expose `ENABLE_VIEWPORT` build option

--- a/include/ledmtx_config.h.in
+++ b/include/ledmtx_config.h.in
@@ -13,6 +13,7 @@
 #define _P18FXXX_INC "${_P18FXXX_INC}"
 
 #define LEDMTX_HAVE_DOUBLE_BUFFER ${LEDMTX_HAVE_DOUBLE_BUFFER}
+#define LEDMTX_HAVE_VIEWPORT ${LEDMTX_HAVE_VIEWPORT}
 
 #define LEDMTX_GITREVISION "${LEDMTX_GITREVISION}"
 
