--- a/tests/lit.site.cfg
+++ b/tests/lit.site.cfg
@@ -42,7 +42,8 @@ config.ledmtx_src_dir = os.path.join(config.ledmtx_test_dir, "..", "src")
 config.ledmtx_config_h = get_config_h_values(os.path.join(config.ledmtx_src_dir,
                                                           "..", "include", "ledmtx_config.h"),
                                              [
-                                                 'LEDMTX_HAVE_DOUBLE_BUFFER'
+                                                 'LEDMTX_HAVE_DOUBLE_BUFFER',
+                                                 'LEDMTX_HAVE_VIEWPORT'
                                              ])
 
 lit.llvm.initialize(lit_config, config)
