--- a/doc/Makefile.template
+++ b/doc/Makefile.template
@@ -1,11 +1,17 @@
 CC = sdcc
 P18FXXX = 18f452
 
+# Video mode description for the ledmtx_modegen utility, which generates `ledmtx_modegen_modes.h`.
+# E.g. for 32x7 @ 50Hz, and uC OSC frequency of 8 MHz,
+OSC_HZ = 8000000
+VIDEO_MODE_DESC = 32 7 7 50
+
 LIBDIR = 
 INCLUDEDIR = 
+BINDIR = 
 
 DRIVER = r393c164
-# list of libledmtx objects to link
+# Update list of libledmtx objects to link, if needed
 O = font5x7
 MODULES = 
 
@@ -16,10 +22,13 @@ CFLAGS = -mpic16 -p$(P18FXXX) --fomit-frame-pointer --pstack-model=small --use-n
 
 OBJECTS += 
 
-all: target.hex
+all: ledmtx_modegen_modes.h target.hex
 
 clean:
-	rm -f *~ *.asm *.cod *.hex *.lst *.map *.o
+	rm -f *~ *.asm *.cod *.hex *.lst *.map *.o ledmtx_modegen_modes.h
+
+ledmtx_modegen_modes.h:
+	$(BINDIR)/ledmtx_modegen --osc-hz $(OSC_HZ) --default=0 $(VIDEO_MODE_DESC) > $@
 
 target.hex: $(OBJECTS)
 	$(CC) $(LDFLAGS) -o $@ $^
