--- a/include/ledmtx_config.h.in
+++ b/include/ledmtx_config.h.in
@@ -15,6 +15,7 @@
 #define LEDMTX_HAVE_DOUBLE_BUFFER ${LEDMTX_HAVE_DOUBLE_BUFFER}
 #define LEDMTX_HAVE_VIEWPORT ${LEDMTX_HAVE_VIEWPORT}
 
+#define LEDMTX_GITBRANCH "${LEDMTX_GITBRANCH}"
 #define LEDMTX_GITREVISION "${LEDMTX_GITREVISION}"
 
 #endif
